* Output the SMF announcements more semantically. (Admin template)  * Make sure the poster information doesn't appear too stretched on widescreen displays. (Display template, forum.css)  * Personal message settings had bullets. (Profile template)
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8636 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/admin.css
+++ b/Themes/curve/css/admin.css
@@ -100,6 +100,16 @@ div.titlebg img.icon
 	height: 120px; 
 	overflow: auto;
 }
+#smfAnnouncements dt
+{
+	border-bottom: 1px dashed #000;
+}
+#smfAnnouncements dd
+{
+	padding: 0;
+	margin: 0 0 1em 1.5em;
+}
+
 #quick_tasks, #quick_tasks ul
 {
 	margin: 0;
